bug fix for adding new answers and adopting new light/dark modes

--- a/client/src/components/QA/qanda.module.css
+++ b/client/src/components/QA/qanda.module.css
@@ -9,7 +9,7 @@
   line-break: anywhere;
 }
 .answerDetails {
-  color: var(--color-faded);
+  color: var(--color-gray);
   display: flex;
   justify-content: flex-start;
   align-items: baseline;
@@ -29,7 +29,7 @@
   flex-grow: 2;
 }
 .questionDetails {
-  color: var(--color-faded);
+  color: var(--color-gray);
   display: flex;
   align-items: baseline;
 }
@@ -45,7 +45,7 @@
   margin-bottom: var(--spacing-sm);
 }
 .error {
-  color: var(--color-error);
+  color: var(--color-red);
   white-space: pre;
 }
 .scrollable {
@@ -65,9 +65,6 @@ button.unstyledBtn, input.unstyledBtn{
 .emphasize, .search input::placeholder {
   text-transform: uppercase;
   font-weight: bold;
-}
-.multiBtn {
-  margin-right: var(--spacing-sm);
 }
 .helpfulness {
   display:flex;
