--- a/client/src/components/global.module.css
+++ b/client/src/components/global.module.css
@@ -139,11 +139,16 @@
   cursor: pointer;
 }
 
-/*Button that looks like a link*/
+/* Buttons */
+/* Button that looks like a link */
 .btnLinkify {
   background: none;
   border: none;
   text-decoration: underline;
   cursor: pointer;
   color: inherit;
+}
+/* Buttons that are next to each other */
+.multiBtn {
+  margin-right: var(--spacing-sm);
 }
