--- a/client/src/components/shared/shared.module.css
+++ b/client/src/components/shared/shared.module.css
@@ -84,5 +84,5 @@
 }
 
 .error {
-  color: red;
+  color: var(--color-red);
 }
